--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,6 +8,7 @@
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      background-color: #0f172a;
     }
     .heart-icon {
       transform: scale(1);
@@ -22,10 +22,10 @@
 <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^19.1.0",
-    "react/": "https://esm.sh/react@^19.1.0/",
-    "react-dom/": "https://esm.sh/react-dom@^19.1.0/",
-    "recharts": "https://esm.sh/recharts@^2.15.3",
+    "react": "https://esm.sh/react@^18.2.0",
+    "react/": "https://esm.sh/react@^18.2.0/",
+    "react-dom/": "https://esm.sh/react-dom@^18.2.0/",
+    "recharts": "https://esm.sh/recharts@2.12.7",
     "@google/genai": "https://esm.sh/@google/genai@^1.4.0",
     "@/App": "./App.tsx",
     "@/components/PatientRowDisplay": "./components/PatientRowDisplay.tsx",
@@ -36,12 +36,13 @@
     "@/components/SimulatorPanel": "./components/SimulatorPanel.tsx",
     "@/components/AddPatientModal": "./components/AddPatientModal.tsx",
     "@/components/ModifyPatientModal": "./components/ModifyPatientModal.tsx",
-    "@/components/ConnectMonitorModal": "./components/ConnectMonitorModal.tsx"
+    "@/components/ConnectMonitorModal": "./components/ConnectMonitorModal.tsx",
+    "@/components/AlertAudioHandler": "./components/AlertAudioHandler.tsx"
   }
 }
 </script>
 </head>
-<body class="bg-slate-900 text-slate-200">
+<body class="text-slate-200">
   <div id="root"></div>
   <script type="module" src="/index.tsx" defer></script>
 </body>
